Revert "Set artifacts as map"
This reverts commit 5d3b1f29979438ed02341a5f35d04e876ae2c39f.

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -384,9 +384,9 @@ node_types:
         required: no
         default: Linux      668c875e-9a39-4dc0-a710-17c41376c1e0
     artifacts:
-      zabbix_agent_role:
-        file: indigo-dc.zabbix-agent
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - zabbix_agent_role:
+          file: indigo-dc.zabbix-agent
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -455,12 +455,12 @@ node_types:
           node: tosca.nodes.indigo.LRMS.FrontEnd
           relationship: tosca.relationships.HostedOn
     artifacts:
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_role:
-        file: indigo-dc.galaxycloud
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.galaxycloud
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -502,21 +502,21 @@ node_types:
         default: "galaxy"
         required: false
     artifacts:
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
-      indigorepo_role:
-        file: indigo-dc.galaxycloud-indigorepo
-        type: tosca.artifacts.AnsibleGalaxy.role
-      oneclient_role:
-        file: indigo-dc.oneclient
-        type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_os_role:
-        file: indigo-dc.galaxycloud-os
-        type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_role:
-        file: indigo-dc.galaxycloud
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - indigorepo_role:
+          file: indigo-dc.galaxycloud-indigorepo
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - oneclient_role:
+          file: indigo-dc.oneclient
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_os_role:
+          file: indigo-dc.galaxycloud-os
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.galaxycloud
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -541,21 +541,21 @@ node_types:
   tosca.nodes.indigo.GalaxyPortalFastConfig:
     derived_from: tosca.nodes.indigo.GalaxyPortalAndStorage
     artifacts:
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
-      indigorepo_role:
-        file: indigo-dc.galaxycloud-indigorepo
-        type: tosca.artifacts.AnsibleGalaxy.role
-      oneclient_role:
-        file: indigo-dc.oneclient
-        type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_os_role:
-        file: indigo-dc.galaxycloud-os
-        type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_role-fastconfig:
-        file: indigo-dc.galaxycloud-fastconfig
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - indigorepo_role:
+          file: indigo-dc.galaxycloud-indigorepo
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - oneclient_role:
+          file: indigo-dc.oneclient
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_os_role:
+          file: indigo-dc.galaxycloud-os
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role-fastconfig:
+          file: indigo-dc.galaxycloud-fastconfig
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -723,12 +723,12 @@ node_types:
           node: tosca.nodes.indigo.GalaxyPortal
           relationship: tosca.relationships.HostedOn
     artifacts:
-      galaxy_role:
-        file: indigo-dc.galaxycloud-tools
-        type: tosca.artifacts.AnsibleGalaxy.role
-      tooldeps_role:
-        file: indigo-dc.galaxycloud-tooldeps
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.galaxycloud-tools
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - tooldeps_role:
+          file: indigo-dc.galaxycloud-tooldeps
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -810,15 +810,15 @@ node_types:
           node: tosca.nodes.indigo.GalaxyPortal
           relationship: tosca.relationships.HostedOn
     artifacts:
-      oneclient_role:
-        file: indigo-dc.oneclient
-        type: tosca.artifacts.AnsibleGalaxy.role
-      cvmfs_role:
-        file: indigo-dc.cvmfs-client
-        type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_role:
-        file: indigo-dc.galaxycloud-refdata
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - oneclient_role:
+          file: indigo-dc.oneclient
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - cvmfs_role:
+          file: indigo-dc.cvmfs-client
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.galaxycloud-refdata
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -901,9 +901,9 @@ node_types:
         default: false
         required: false
     artifacts:
-      docker_agent_role:
-        file: indigo-dc.clues
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - docker_agent_role:
+          file: indigo-dc.clues
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
@@ -972,15 +972,15 @@ node_types:
     metadata:
       icon: /images/slurm.png
     artifacts:
-      slurm_role:
-        file: indigo-dc.slurm
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
-      openvpn_role:
-        file: indigo-dc.openvpn
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - slurm_role:
+          file: indigo-dc.slurm
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - openvpn_role:
+          file: indigo-dc.openvpn
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1032,15 +1032,15 @@ node_types:
     metadata:
       icon: /images/slurm.png
     artifacts:
-      slurm_role:
-        file: indigo-dc.slurm
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
-      openvpn_role:
-        file: indigo-dc.openvpn
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - slurm_role:
+          file: indigo-dc.slurm
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - openvpn_role:
+          file: indigo-dc.openvpn
+          type: tosca.artifacts.AnsibleGalaxy.role
     capabilities:
         lrms:
           type: tosca.capabilities.indigo.LRMS.Slurm
@@ -1244,9 +1244,9 @@ node_types:
         required: no
         default: 'indigodatacloudapps/dariah-repository:web'
     artifacts:
-      dariahrepo_role:
-        file: indigo-dc.dariahrepo
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - dariahrepo_role:
+          file: indigo-dc.dariahrepo
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
@@ -1356,27 +1356,27 @@ node_types:
         required: no
         default: false
     artifacts:
-      docker_agent_role:
-        file: indigo-dc.docker
-        type: tosca.artifacts.AnsibleGalaxy.role
-      consul_agent_role:
-        file: indigo-dc.consul
-        type: tosca.artifacts.AnsibleGalaxy.role
-      zookeeper_agent_role:
-        file: indigo-dc.zookeeper
-        type: tosca.artifacts.AnsibleGalaxy.role
-      mesos_agent_role:
-        file: indigo-dc.mesos
-        type: tosca.artifacts.AnsibleGalaxy.role
-      marathon_agent_role:
-        file: indigo-dc.marathon
-        type: tosca.artifacts.AnsibleGalaxy.role
-      chronos_agent_role:
-        file: indigo-dc.chronos
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - docker_agent_role:
+          file: indigo-dc.docker
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - consul_agent_role:
+          file: indigo-dc.consul
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - zookeeper_agent_role:
+          file: indigo-dc.zookeeper
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - mesos_agent_role:
+          file: indigo-dc.mesos
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - marathon_agent_role:
+          file: indigo-dc.marathon
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - chronos_agent_role:
+          file: indigo-dc.chronos
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1471,9 +1471,9 @@ node_types:
         type: string
         required: no
     artifacts:
-      cms_config_role:
-        file: indigo-dc.cms_config
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - cms_config_role:
+          file: indigo-dc.cms_config
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         start:
@@ -1526,18 +1526,18 @@ node_types:
         required: no
         default: false
     artifacts:
-      docker_agent_role:
-        file: indigo-dc.docker
-        type: tosca.artifacts.AnsibleGalaxy.role
-      consul_agent_role:
-        file: indigo-dc.consul
-        type: tosca.artifacts.AnsibleGalaxy.role
-      mesos_agent_role:
-        file: indigo-dc.mesos
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - docker_agent_role:
+          file: indigo-dc.docker
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - consul_agent_role:
+          file: indigo-dc.consul
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - mesos_agent_role:
+          file: indigo-dc.mesos
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
@@ -1595,9 +1595,9 @@ node_types:
         type: string
         required: no
     artifacts:
-      cms_config_role:
-        file: indigo-dc.cms_config
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - cms_config_role:
+          file: indigo-dc.cms_config
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1642,15 +1642,15 @@ node_types:
         type: string
         required: yes
     artifacts:
-      docker_agent_role:
-        file: indigo-dc.docker
-        type: tosca.artifacts.AnsibleGalaxy.role
-      consul_agent_role:
-        file: indigo-dc.consul
-        type: tosca.artifacts.AnsibleGalaxy.role
-      marathon_lb_role:
-        file: indigo-dc.marathon-lb
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - docker_agent_role:
+          file: indigo-dc.docker
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - consul_agent_role:
+          file: indigo-dc.consul
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - marathon_lb_role:
+          file: indigo-dc.marathon-lb
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
@@ -1734,9 +1734,9 @@ node_types:
         required: false
         default: '-1'
     artifacts:
-      spark_mesos_role:
-        file: indigo-dc.spark-mesos
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - spark_mesos_role:
+          file: indigo-dc.spark-mesos
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
@@ -1795,9 +1795,9 @@ node_types:
     metadata:
       icon: /images/hadoop-master.jpg
     artifacts:
-      hadoop_role:
-        file: indigo-dc.hadoop
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - hadoop_role:
+          file: indigo-dc.hadoop
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1814,9 +1814,9 @@ node_types:
         required: yes
         type: string
     artifacts:
-      hadoop_role:
-        file: indigo-dc.hadoop
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - hadoop_role:
+          file: indigo-dc.hadoop
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1836,9 +1836,9 @@ node_types:
         constraints:
         - valid_values: [ disvis, powerfit ]
     artifacts:
-      galaxy_role:
-        file: indigo-dc.disvis-powerfit
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.disvis-powerfit
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1873,9 +1873,9 @@ node_types:
   tosca.nodes.indigo.Eubiosteo:
     derived_from: tosca.nodes.SoftwareComponent
     artifacts:
-      galaxy_role:
-        file: indigo-dc.eubiosteo
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.eubiosteo
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1886,9 +1886,9 @@ node_types:
     metadata:
       icon: /images/amber.jpg
     artifacts:
-      galaxy_role:
-        file: indigo-dc.ambertools
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.ambertools
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1899,9 +1899,9 @@ node_types:
     metadata:
       icon: /images/kepler.jpeg
     artifacts:
-      galaxy_role:
-        file: indigo-dc.kepler
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - galaxy_role:
+          file: indigo-dc.kepler
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1920,15 +1920,15 @@ node_types:
         required: false
         default: []
     artifacts:
-      ophidia_role:
-        file: indigo-dc.ophidia-cluster
-        type: tosca.artifacts.AnsibleGalaxy.role
-      slurm_role:
-        file: indigo-dc.slurm
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - ophidia_role:
+          file: indigo-dc.ophidia-cluster
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - slurm_role:
+          file: indigo-dc.slurm
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -1946,15 +1946,15 @@ node_types:
         description: IP of the OphidiaServer node
         required: true
     artifacts:
-      ophidia_role:
-        file: indigo-dc.ophidia-cluster
-        type: tosca.artifacts.AnsibleGalaxy.role
-      slurm_role:
-        file: indigo-dc.slurm
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - ophidia_role:
+          file: indigo-dc.ophidia-cluster
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - slurm_role:
+          file: indigo-dc.slurm
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -2017,15 +2017,15 @@ node_types:
     metadata:
       icon: /images/kubernetesWN.png
     artifacts:
-      kube_role:
-        file: grycap.kubernetes
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
-      openvpn_role:
-        file: indigo-dc.openvpn
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - kube_role:
+          file: grycap.kubernetes
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - openvpn_role:
+          file: indigo-dc.openvpn
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -2048,15 +2048,15 @@ node_types:
         type: string
         default: some_insecure_token
     artifacts:
-      kube_role:
-        file: grycap.kubernetes
-        type: tosca.artifacts.AnsibleGalaxy.role
-      nfs_role:
-        file: indigo-dc.nfs
-        type: tosca.artifacts.AnsibleGalaxy.role
-      openvpn_role:
-        file: indigo-dc.openvpn
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - kube_role:
+          file: grycap.kubernetes
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - nfs_role:
+          file: indigo-dc.nfs
+          type: tosca.artifacts.AnsibleGalaxy.role
+      - openvpn_role:
+          file: indigo-dc.openvpn
+          type: tosca.artifacts.AnsibleGalaxy.role
     capabilities:
         lrms:
           type: tosca.capabilities.indigo.LRMS.Kubernetes
@@ -2088,9 +2088,9 @@ node_types:
         constraints:
         - valid_values: [ local, dummy ]
     artifacts:
-      kube_role:
-        file: indigo-dc.jupyterhub
-        type: tosca.artifacts.AnsibleGalaxy.role
+      - kube_role:
+          file: indigo-dc.jupyterhub
+          type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
