--- a/artifacts/galaxy/galaxy_redfata_configure.yml
+++ b/artifacts/galaxy/galaxy_redfata_configure.yml
@@ -6,6 +6,11 @@
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_key_file }}'
         dest: '/tmp'
-      when: refdata_provider_type == 'cvmfs'
+      when: (refdata_provider_type == 'cvmfs') or (refdata_provider_type == 'cvmfs_preconfigured')
+    - name: Get refdata-list
+      get_url:
+        url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_config_files/{{ refdata_cvmfs_repository_name }}.conf'
+        dest: '/tmp'
+      when: refdata_provider_type == 'cvmfs_preconfigured'
   roles:
     - role: indigo-dc.galaxycloud-refdata
